@@ -4,23 +4,21 @@ import com.luoke.app.config.AppConfig;
 import com.luoke.app.hook.HookEventType;
 import com.luoke.app.hook.event.PlayerPositionEvent;
 import com.luoke.app.hook.multicast.HookRegistry;
-import javafx.scene.image.Image;
 import lombok.Getter;
 import lombok.Setter;
 
-import java.nio.MappedByteBuffer;
 
 /**
- * 地图上下文管理：负责地图图像、视口状态（缩放/偏移）及玩家位置的维护与转换。
+ * 地图上下文管理：负责视口状态（缩放/偏移）及玩家位置的维护与转换。
+ * 瓦片金字塔模式下不再持有全图，仅管理元数据与运行时状态。
  * 采用单例模式（Holder）及观察者模式（HookRegistry）分发位置更新。
  */
 @Getter
 @Setter
 public class MapContext {
 
-    private Image mapImage;
-    private MappedByteBuffer mapImageBuffer; // mmap 缓冲区强引用，防止 GC 回收映射内存
     private double mapWidth, mapHeight; // 原始地图尺寸
+    private boolean initialized = false;
 
     /** * 视口状态：scale(缩放), offsetX/Y(相对于地图左上角的屏幕偏移)
      * 计算公式：CanvasX = offsetX + WorldX * scale
@@ -31,6 +29,7 @@ public class MapContext {
 
     private double playerX = -1, playerY = -1; // 玩家世界坐标
     private double playerAngle = 0;             // 玩家朝向
+    private boolean hasAngle = false;           // 是否有有效朝向数据
     private boolean playerInitialized = false;  // 是否已定位
 
     private String currentMapKey; // 当前地图唯一标识
@@ -41,37 +40,22 @@ public class MapContext {
         return Holder.INSTANCE;
     }
 
-    /** 基础初始化：设置地图图源及视口尺寸 */
-    public void init(Image image, double w, double h) {
-        this.mapImage = image;
-        this.mapWidth = image.getWidth();
-        this.mapHeight = image.getHeight();
-        this.viewWidth = w;
-        this.viewHeight = h;
-    }
-
-    /** 完整初始化：初始化参数并注册到 MapCoordinateManager */
-    public void initWithKey(Image image, double w, double h, String mapKey) {
-        init(image, w, h);
+    /** 初始化地图元数据并注册到 MapCoordinateManager（不再需要全图） */
+    public void init(String mapKey, int mapW, int mapH) {
         this.currentMapKey = mapKey;
+        this.mapWidth = mapW;
+        this.mapHeight = mapH;
+        this.initialized = true;
         MapCoordinateManager.getInstance().registerMap(
-                mapKey, (int) w, (int) h, AppConfig.JSON_ZOOM, AppConfig.MAP_ZOOM
+                mapKey, mapW, mapH, AppConfig.JSON_ZOOM, AppConfig.MAP_ZOOM
         );
-    }
-
-    /**
-     * mmap 版本：额外持有 MappedByteBuffer 引用防止 GC 回收
-     */
-    public void initWithKey(Image image, double w, double h, String mapKey, MappedByteBuffer buffer) {
-        this.mapImageBuffer = buffer;
-        initWithKey(image, w, h, mapKey);
     }
 
     /** 更新玩家状态并发布 PLAYER_UPDATE 事件 */
     public void updatePlayerState(double x, double y, Double visualAngle) {
         this.playerX = x;
         this.playerY = y;
-        if (visualAngle != null) this.playerAngle = visualAngle;
+        if (visualAngle != null) { this.playerAngle = visualAngle; this.hasAngle = true; }
         this.playerInitialized = true;
         HookRegistry.INSTANCE.publish(
                 HookEventType.PLAYER_UPDATE,
@@ -94,7 +78,7 @@ public class MapContext {
      */
     public void zoom(double factor, double mx, double my) {
         double minScale = Math.max(viewWidth / mapWidth, viewHeight / mapHeight);
-        double newScale = Math.max(minScale, Math.min(scale * factor, 15));
+        double newScale = Math.clamp(scale * factor, minScale, 15);
         double f = newScale / scale;
 
         offsetX = mx - (mx - offsetX) * f;
@@ -106,12 +90,12 @@ public class MapContext {
 
     /** 边界限制：地图大于视口时防止越界，小于视口时自动居中 */
     public void ensureBounds() {
-        if (mapImage == null) return;
+        if (!initialized) return;
         double w = mapWidth * scale;
         double h = mapHeight * scale;
 
-        offsetX = (w >= viewWidth) ? Math.min(0, Math.max(offsetX, viewWidth - w)) : (viewWidth - w) / 2;
-        offsetY = (h >= viewHeight) ? Math.min(0, Math.max(offsetY, viewHeight - h)) : (viewHeight - h) / 2;
+        offsetX = (w >= viewWidth) ? Math.clamp(offsetX, viewWidth - w, 0) : (viewWidth - w) / 2;
+        offsetY = (h >= viewHeight) ? Math.clamp(offsetY, viewHeight - h, 0) : (viewHeight - h) / 2;
     }
 
     /** 线程安全的单例持有类 */
